# bci-coherence-score

./: README.md  environment.lock.yml  pyproject.toml  requirements-lock.txt  requirements.in
scripts/: lock_environment.sh  reproduce_analysis_outputs.sh  run_bcs_distiller.sh  run_smoke.sh  run_vlm_full.sh
src/bci_repro/: __init__.py  __main__.py  _legacy.py  _paths.py  agreement.py  analyze_results.py  check_environment.py  compute_metrics.py  make_paper_assets.py  metric_utils.py  prepare_inputs.py  repair_vlm_outputs.py  run_vlm.py  scoring.py  splits.py  train_bcs.py  verify_outputs.py
src/bci_repro/pipelines/: __init__.py  analyze_perceptual_degradation_probe.py  analyze_reconstruction_metrics.py  compare_vlm_annotation_agreement.py  compare_vlm_reasoning_semantics.py  ensemble_distiller_predictions.py  internvl3_eval_pairs.py  internvl3_speed_benchmark.py  make_failure_pattern_examples.py  make_individual_vlm_matrices.py  make_paper_figures.py  ordinal_calibrate_predictions.py  repair_vlm_outputs.py  select_ordinal_expert_predictions.py  stack_distiller_predictions.py  summarize_distiller_results.py  train_vlm_score_distiller.py  train_vlm_score_distiller_v2.py  vlm_eval_pairs.py
tests/: run_unit_tests.py  test_agreement.py  test_compute_metrics.py  test_metric_utils.py  test_scoring.py  test_splits.py
